- alignment fixes

--- a/app/sass/index.sass
+++ b/app/sass/index.sass
@@ -1,2 +1,5 @@
-body
+.container
     max-width: 1280px
+
+.navbar
+    width: 100%
